--- a/css/cover.scss
+++ b/css/cover.scss
@@ -69,9 +69,18 @@
   max-width: 100%;
 }
 
-#feedback, #correct_answer {
+#feedback, #score, #correct_answer {
   list-style: none;
   padding-left: 0;
+}
+
+#answer-box .card {
+  margin-bottom: 1em;
+}
+
+#feedbackContainer {
+  max-height: 20em;
+  overflow-y: auto;
 }
 
 .background {
